8243670: Unexpected test result caused by C2 MergeMemNode::Ideal

Reviewed-by: thartmann, roland